# iati_json_parser

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  test_example.py
.github/workflows/: ci.yml
example/: example.xml
iati_json_parser/: __init__.py
src/: lib.rs
src/converter/: array_paths.rs  mod.rs  utils.rs
tests/: find_iati_id.rs
