[package]
name = "iati_json_parser"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "iati_json_parser"

[profile.release]
strip = false 

[dependencies]
chardet = "0.2.4"
encoding = "0.2.33"
eyre = { version = "0.6.8" }
pyo3 = { version = "0.17.3", features = ["extension-module", "eyre"] }
quickxml_to_serde = { version = "0.5.0", features = ["json_types"] }
serde_json = { version = "1.0.87", features = ["preserve_order"] }
regex = "1"
