[package]
name = "iati_json_parser"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "iati_json_parser"

[profile.release]
strip = false

[dependencies]
chardet = "0.2.4"
encoding = "0.2.33"
eyre = { version = "0.6.8" }
pyo3 = { version = "0.17.3", features = ["extension-module", "eyre"] }
quickxml_to_serde = { version = "0.5.0", features = ["json_types"] }
quick-xml = "0.30.0"
serde_json = { version = "1.0.87", features = ["preserve_order"] }
regex = "1"
indicatif = "0.17.7"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
rayon = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
zip = "0.6"
tokio = { version = "1", features = ["full"] }
fs_extra = "1.2"
